--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "echo \"Error: No Tests\" && exit 1",
+        "serve": "node index.js",
         "start": "nodemon index.js"
     },
     "keywords": [],
